@@ -1,3 +1,9 @@
+Sun Dec 13 20:12:14 2015  Yuki Yugui Sonoda  <yugui@yugui.jp>
+
+	* parse.y (parse_percent): Allow %-literals in labeled arg as
+	  r51624 did for parentheses.
+	  Fixes [ruby-core:72084] [Bug #11812].
+
 Sun Dec 13 20:02:15 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
 
 	* ChangeLog: fix a typo
